--- a/src/index.html
+++ b/src/index.html
@@ -152,6 +152,178 @@
       </div>
    </section>
 
+   <section class="catalog">
+      <div class="container">
+         <h2 class="catalog__title">Каталог пульсометров</h2>
+         <ul class="catalog__tabs">
+            <li class="catalog__tab catalog__tab-active">
+               <div>для фитнеса</div>
+            </li>
+            <li class="catalog__tab">
+               <div>для бега</div>
+            </li>
+            <li class="catalog__tab">
+               <div>для триатлона</div>
+            </li>
+         </ul>
+
+         <div class="catalog__content">
+            <div class="catalog-item">
+               <div class="catalog-item__wrapper">
+                  
+                  <div class="catalog-item__content">
+                     <img src="img/icons/card-item.png" alt="pulsometr" class="catalog-item__img">
+                     <h3 class="catalog-item__subtitle">Пульсометр Polar FT1</h3>
+                     <div class="catalog-item__decription">Для первых шагов в тренировках, основанных на сердечном
+                        ритме</div>
+                     <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                     
+                  </div>
+                  <div class="catalog-item__list">
+                     <ul>
+                        <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                        <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                        <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                        <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                     </ul>
+                     <a href="#" class="catalog-item__link">Назад</a>
+                  </div>
+               </div>
+               <div class="catalog-item__line"></div>
+               <div class="catalog-item__footer">
+                  <div class="catalog-item__prices">
+                     <div class="catalog-item__old-price">4 750 руб.</div>
+                     <div class="catalog-item__price">4 500 руб.</div>
+                  </div>
+                  <button class="catalog-item__button button">КУПИТЬ</button>
+               </div>
+            </div>
+
+            <div class="catalog-item">
+               <div class="catalog-item__wrapper">
+                  <div class="catalog-item__content">
+                     <img src="img/icons/card-item.png" alt="pulsometr" class="catalog-item__img">
+                     <h3 class="catalog-item__subtitle">Пульсометр Polar FT1</h3>
+                     <div class="catalog-item__decription">Для первых шагов в тренировках, основанных на сердечном
+                        ритме</div>
+                     <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                  </div>
+                  <div class="catalog-item__list">
+                     Hello
+                  </div>
+               </div>
+               <div class="catalog-item__line"></div>
+               <div class="catalog-item__footer">
+                  <div class="catalog-item__prices">
+                     <div class="catalog-item__old-price">6 690 руб.</div>
+                     <div class="catalog-item__price">6 641 руб.</div>
+                  </div>
+                  <button class="catalog-item__button button">КУПИТЬ</button>
+               </div>
+            </div>
+
+            <div class="catalog-item">
+               <div class="catalog-item__wrapper">
+                  <div class="catalog-item__content">
+                     <img src="img/icons/card-item.png" alt="pulsometr" class="catalog-item__img">
+                     <h3 class="catalog-item__subtitle">Пульсометр Polar FT1</h3>
+                     <div class="catalog-item__decription">Для первых шагов в тренировках, основанных на сердечном
+                        ритме</div>
+                     <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                  </div>
+                  <div class="catalog-item__list">
+                     Hello
+                  </div>
+               </div>
+               <div class="catalog-item__line"></div>
+               <div class="catalog-item__footer">
+                  <div class="catalog-item__prices">
+                     <div class="catalog-item__old-price">7 390 руб.</div>
+                     <div class="catalog-item__price">7 021 руб.</div>
+                  </div>
+                  <button class="catalog-item__button button">КУПИТЬ</button>
+               </div>
+            </div>
+
+            <div class="catalog-item">
+               <div class="catalog-item__wrapper">
+                  <div class="catalog-item__content">
+                     <img src="img/icons/card-item.png" alt="pulsometr" class="catalog-item__img">
+                     <h3 class="catalog-item__subtitle">Пульсометр Polar FT1</h3>
+                     <div class="catalog-item__decription">Для первых шагов в тренировках, основанных на сердечном
+                        ритме</div>
+                     <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                  </div>
+                  <div class="catalog-item__list">
+                     Hello
+                  </div>
+               </div>
+               <div class="catalog-item__line"></div>
+               <div class="catalog-item__footer">
+                  <div class="catalog-item__prices">
+                     <div class="catalog-item__old-price">4 750 руб.</div>
+                     <div class="catalog-item__price">4 500 руб.</div>
+                  </div>
+                  <button class="catalog-item__button button">КУПИТЬ</button>
+               </div>
+            </div>
+
+            <div class="catalog-item">
+               <div class="catalog-item__wrapper">
+                  <div class="catalog-item__content">
+                     <img src="img/icons/card-item.png" alt="pulsometr" class="catalog-item__img">
+                     <h3 class="catalog-item__subtitle">Пульсометр Polar FT1</h3>
+                     <div class="catalog-item__decription">Для первых шагов в тренировках, основанных на сердечном
+                        ритме</div>
+                     <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                  </div>
+                  <div class="catalog-item__list">
+                     Hello
+                  </div>
+               </div>
+               <div class="catalog-item__line"></div>
+               <div class="catalog-item__footer">
+                  <div class="catalog-item__prices">
+                     <div class="catalog-item__old-price">6 690 руб.</div>
+                     <div class="catalog-item__price">6 641 руб.</div>
+                  </div>
+                  <button class="catalog-item__button button">КУПИТЬ</button>
+               </div>
+            </div>
+
+            <div class="catalog-item">
+               <div class="catalog-item__wrapper">
+                  <div class="catalog-item__content">
+                     <img src="img/icons/card-item.png" alt="pulsometr" class="catalog-item__img">
+                     <h3 class="catalog-item__subtitle">Пульсометр Polar FT1</h3>
+                     <div class="catalog-item__decription">Для первых шагов в тренировках, основанных на сердечном
+                        ритме</div>
+                     <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                  </div>
+                  <div class="catalog-item__list">
+                     Hello
+                  </div>
+               </div>
+               <div class="catalog-item__line"></div>
+               <div class="catalog-item__footer">
+                  <div class="catalog-item__prices">
+                     <div class="catalog-item__old-price">6 690 руб.</div>
+                     <div class="catalog-item__price">6 641 руб.</div>
+                  </div>
+                  <button class="catalog-item__button button">КУПИТЬ</button>
+               </div>
+            </div>
+         </div>
+
+         <div class="catalog__content">
+
+         </div>
+
+         <div class="catalog__content">
+
+         </div>
+      </div>
+   </section>
 
 
 
